[tool.poetry]
name = "kowmang-toolbox"
version = "0.1.0"
description = "Kownman Toolbox Substack Support Code"
authors = ["David ROBERT <aradiel@free.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
